<resources>
    <string name="app_name">Express News</string>

    <!-- News category keys -->
    <string name="KEY_BOOKMARKS">Bookmarks</string>
    <string name="KEY_HOME">Home</string>
    <string name="KEY_TOP_STORIES">Top Stories</string>
    <string name="KEY_NATIONAL">National</string>
    <string name="KEY_INTERNATIONAL">International</string>
    <string name="KEY_SPORTS">Sports</string>
    <string name="KEY_USERS">Users</string>

    <!-- Strings related to App theme -->
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="text_size_small">Small</string>
    <string name="text_size_medium">Medium</string>
    <string name="text_size_large">Large</string>

    <!-- Strings related to HomeScreen activity -->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="app_logo">App Logo</string>

    <!-- Strings related to NewsDescription activity -->
    <string name="updated_date">Updated %1$s</string>
    <string name="news_image_1">News Image 1</string>
    <string name="news_image_2">News Image 2</string>
    <string name="overflow_content_description">Overflow</string>

    <!-- Strings related to Register Activity -->
    <string name="register_activity_title">Create a new account</string>
    <string name="register_progress_dialog_title">Registering User…</string>
    <string name="register_progress_dialog_message">Please wait while we setup things</string>
    <string name="register_hint_name">Name</string>
    <string name="register_hint_email">Email Address</string>
    <string name="register_hint_password">Password</string>
    <string name="register_create_account">CREATE A NEW ACCOUNT</string>

    <!-- Strings related to Settings Activity -->
    <string name="settings_alert_dialog_message">Are you sure you want to logout?</string>
    <string name="settings_log_out">Log Out</string>
    <string name="settings">Settings</string>

    <!-- Strings related to Start Activity -->
    <string name="start_progress_dialog_title">Logging in…</string>
    <string name="start_progress_dialog_message">Please wait while we log you in</string>
    <string name="start_error_message">Username and password combination not correct.</string>
    <string name="start_log_in">LOG IN</string>
    <string name="start_sign_up">New user? Sign up</string>

    <!-- Strings related to App preferences -->
    <string name="download_images">Download Images</string>
    <string name="app_settings">APP SETTINGS</string>
    <string name="themes">THEMES</string>

    <!-- Other strings -->
    <string name="remove_bookmark_alert_dialog_message">Are you sure you want to remove Bookmark?</string>
    <string name="error_connection">No Internet Connection.</string>
    <string name="auth_failed">Authorisation failed.</string>
    <string name="bookmark_added">Bookmark added.</string>
    <string name="news_fetch_message">Fetching data…</string>
    <string name="menu_remove_from_list">Remove from list</string>
    <string name="menu_bookmark">Bookmark</string>
    <string name="volley_error">Please try again</string>

</resources>
