<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?layoutBackground"
    tools:context="com.example.sarthak.news.activities.StartActivity">

    <ImageView
        android:id="@+id/start_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_email"
        android:src="@drawable/logo"
        android:adjustViewBounds="true"
        android:contentDescription="@string/app_logo"
        android:background="?layoutBackground"
        android:padding="50dp"/>

    <EditText
        android:id="@+id/start_email"
        android:layout_above="@+id/start_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_email"
        android:background="@drawable/inputoutline"
        android:textColor="?textColor"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/start_password"
        android:layout_above="@+id/start_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_hint_password"
        android:background="@drawable/inputoutline"
        android:textColor="?textColor"
        android:inputType="textPassword"
        android:padding="10dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp" />

    <Button
        android:id="@+id/start_login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/start_register_btn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:text="@string/start_log_in"
        android:textColor="#fff"
        android:background="?buttonBackground" />

    <Button
        android:id="@+id/start_register_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_sign_up"
        android:background="#00000000"
        android:textColor="?textColor"
        android:textAllCaps="false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
